Fix build of GraphicsContext3DOpenGLCommon.cpp with MSVC https://bugs.webkit.org/show_bug.cgi?id=96120

Patch by Simon Hausmann <simon.hausmann@nokia.com> on 2012-09-07
Reviewed by Noam Rosenthal.

Variable stack arrays are a GCC extension. Replace their use with OwnArrayPtr, similar to
other functions in the same file.

* platform/graphics/opengl/GraphicsContext3DOpenGLCommon.cpp:
(WebCore::GraphicsContext3D::getActiveAttrib):

Canonical link: https://commits.webkit.org/114033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127934 268f45cc-cd09-0410-ab3c-d52691b4dbfc